data_model/tests/ui_fail/neg_one_private.rs
use iroha_data_primitives::fixed::Fixed;

fn main() {
    let qty = Fixed::negative_one();
}
